--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
-  text-align: center;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  overflow-x: hidden;
 }
 
 .App-logo {
@@ -13,7 +17,7 @@
   }
 }
 
-.App-header {
+/* .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -35,4 +39,78 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.nav-headSection{
+  margin: 0 auto;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.timezone{
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+#timezone-options{
+  
+}
+
+.day-time{
+  display: flex;
+  gap: 40px;
+}
+
+.week-time{
+  display: flex;
+  flex-direction: row;
+}
+
+.timetable{
+  width: 90%;
+}
+
+.table{
+  /* padding: 20px; */
+  display: flex;
+    flex-direction: column;
+    gap: 40px 
+}
+
+tr{
+  display: flex;
+  gap: 50px;
+  flex-direction: row;
+}
+
+td{
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+button{
+  border: 0;
+  background-color: white;
+  color: blue;
+  cursor: pointer;
+}
+
+label{
+  color: black;
+  font-weight: 500;
+}
+select{
+  height: 30px;
+}
+
+.weekday{
+  color: brown;
+}
+.info{
+  font-size: small;
 }
